# AdventOfCode2021

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
input_data/: day10_custom.txt  day15_smooth.txt
src/: helpers.rs  lib.rs  main.rs
src/helpers/: accu_iter.rs  image_manipulation.rs  input_parsing.rs  mod.rs  nested_iterator_chain.rs  rendering.rs  temporary_hashset.rs
src/helpers/rendering/: common.rs  gif.rs  mod.rs  webp.rs
src/reference_solutions/: day01.rs  mod.rs
src/renderers/: day05.rs  day11.rs  day15.rs  day25.rs
src/reworked_solutions/: day01.rs  day08.rs  day12.rs  day16.rs  day17.rs  day22.rs
src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
src/solvers/: day01.rs  day02.rs  day03.rs  day05.rs  day06.rs  day07.rs  day08.rs  helpers.rs  mod.rs
