[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
clap = "3.0.0-beta.5"
itertools = "0.10"
regex = "1"
lazy_static = "1.4"
image = "0.23"
ndarray = "0.15"
gifski = "1.5"
rgb = "0.8"
imgref = "1.9"
webp-animation = "0.5"
indicatif = "0.16"
num = "0.4"
